--- a/latex_report/compact_models/gg.tex
+++ b/latex_report/compact_models/gg.tex
@@ -1,6 +1,6 @@
 The second compact model implemented is the one proposed by Gavish and Graves, based on the single commodity flow:  the arcs are considered as pipes.\\
 Like in the MTZ model, a new variable is introduced in the problem. It is called "Flow of the arc" and it is represented with the symbol $y_{ij}$. Compared with the model in section \ref{chapter:mtz}, the starting value of $y_{ij}$ is $n-1$ and decrease by 1 at each following node in the optimal solution. 
-To implement this proposition the following constraints are added to the instance:
+To implement this proposition the following constraints are added to the model:
 %\begin{comment}
 \begin{equation}
 \label{eqn:linking}
@@ -18,5 +18,3 @@ y_{ij}\le (n-1)x_{ij}
 \end{equation}
 %\end{comment}
 
-
-This formula finds an optimal solution without sub-tours.
