--- a/latex_report/intros/intro_compact_models.tex
+++ b/latex_report/intros/intro_compact_models.tex
@@ -3,11 +3,11 @@ TSP problem. In particular, I will describe the Miller, Tucker, and Zemlin model
 
 \section{Basic model}
 \label{chapter:basic_model}
-\input{capitolo2/basic_model.tex}
+\input{compact_models/basic_model.tex}
 
 \section{The Miller, Tucker, and Zemlin model}
 \label{chapter:mtz}
-\input{capitolo2/mtz.tex}
+\input{compact_models/mtz.tex}
 
 \section{The Gavish and Graves model}
-\input{capitolo2/gg.tex}
+\input{compact_models/gg.tex}
