--- a/latex_report/intros/intro_heuristic_solutions.tex
+++ b/latex_report/intros/intro_heuristic_solutions.tex
@@ -2,11 +2,11 @@ In this section I am going to explore a new branch of the TSP resolution, in whi
 
 
 \section{Matheuristics}
-\input{capitolo4/matheuristic.tex}
+\input{heuristics/matheuristic.tex}
 
-\section{Heuristics}
-\input{capitolo4/heuristic.tex}
+\section{Specialized heuristics}
+\input{heuristics/heuristic.tex}
 
 \section{Metaheuristics}
 \label{chapter:metaheuristics}
-\input{capitolo4/metaheuristic.tex}
+\input{heuristics/metaheuristic.tex}
