--- a/latex_report/intros/intro_introduction.tex
+++ b/latex_report/intros/intro_introduction.tex
@@ -10,8 +10,8 @@ considering cities as DNA fragments, and astronomy, where they are stars.\\
 Even though it is a NP-hard problem, instances with the dimensions of thousand or even millions of cities can be solved  with great precision (around 1\%) thanks to many heuristics and exact algorithms.
 
 \section{Brief history of the problem}
-\input{capitolo1/sezione1.tex}
+\input{introduction/sezione1.tex}
 
 \section{The mathematical formulation}
 \label{chapter:mat_formulation}
-\input{capitolo1/sezione2.tex}
+\input{introduction/sezione2.tex}
