--- a/latex_report/intros/intro_secs.tex
+++ b/latex_report/intros/intro_secs.tex
@@ -2,12 +2,12 @@ In chapter \ref{chapter:compact-models} I described models that cut out any poss
 
 \section{Benders method}
 \label{chapter:benders}
-\input{capitolo3/benders.tex}
+\input{secs/benders.tex}
 
 \section{Callback method}
 \label{chapter:callback}
-\input{capitolo3/callback.tex}
+\input{secs/callback.tex}
 
 \subsection{Callback on the fractional solutions}
 \label{chapter:callback-fractional}
-\input{capitolo3/callback_fractional.tex}
+\input{secs/callback_fractional.tex}
